tests/ivg/invalid/invalid_fill_rule.ivg
format IVG-3
// unrecognized fill rule
fill rule:zigzag red
